# raycaster

./: .gitignore  CMakeLists.txt  collision.c  collision.h  debug.c  debug.h  input.c  input.h  main.c  map.c  map.csv  map.h  mouse.c  mouse.h  player.c  player.h  raycaster  raycaster.c  raycaster.h  render.c  render.h  sdlstuff.c  sdlstuff.h  sector.c  sector.h  vectors.c  vectors.h  worldgen.c  worldgen.h
